Added new project check features component

--- a/_factory_testimonials.html
+++ b/_factory_testimonials.html
@@ -464,7 +464,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h2 class="pd-testimonial-10-label">Review</h2> 
+                        <h2 class="pd-testimonial-10-label text-center text-md-start">Review</h2> 
                         <p class="pd-testimonial-10-text">&quot;Tim&rsquo;s flexible approach and support has meant that we now have a fantastic website that will support Scientific Services going forward. I wouldn&rsquo;t hesitate to recommend Pendigital&rsquo;s services and I am looking to use their services to support other marketing activities in the future.&quot;</p>
                         <p class="mb-0 pd-testimonial-10-author">Carly Matthews</p>
                         <p class="pd-testimonial-10-business">Scientific Services</p> 
