--- a/_factory_sections.html
+++ b/_factory_sections.html
@@ -320,7 +320,8 @@
             </div>
             <footer class="container pb-3 pt-5 text-end">
                 <div class="row">
-                    <div class="col text-center text-md-end"><a href="#" name="anchor" class="pd-section-8-link">Learn why we made Scissors<span><img src="images/design-assets/icon-arrow-secondary.svg" alt="icon of an arrow" width="20" height="20"/></span></a> 
+                    <div class="col text-center text-md-end">
+                        <a href="#" name="anchor" class="pd-section-8-link">Learn why we made Scissors<span><img src="images/design-assets/icon-arrow-secondary.svg" alt="icon of an arrow" width="20" height="20"/></span></a> 
                     </div>
                 </div>
             </footer>
@@ -511,7 +512,8 @@
             </div>
             <footer class="container pb-3 pt-5 text-end">
                 <div class="row">
-                    <div class="col text-center text-md-end"><a href="#" name="anchor" class="pd-section-13-link">Meet the team<span><img src="images/design-assets/icon-arrow-secondary.svg" alt="icon of an arrow" width="20" height="20"/></span></a> 
+                    <div class="col text-center text-md-end">
+                        <a href="#" name="anchor" class="pd-section-13-link">Meet the team<span><img src="images/design-assets/icon-arrow-secondary.svg" alt="icon of an arrow" width="20" height="20"/></span></a> 
                     </div>
                 </div>
             </footer>
@@ -539,7 +541,8 @@
                                 <img alt="image of woman working" width="80" height="80" src="/images/uploads/testimonial-woman.jpg" class="pd-section-14-img-thumbnail pd-section-14-img-thumbnail-right" loading="lazy"/>
                             </picture>
                         </div>
-                        <p class="pd-section-14-leading-para">Hi, we&rsquo;re Tim and Emma Bowerbank, web developers based in Cornwall in the UK. We&rsquo;re here to help you create your web projects. From bespoke systems to websites with a CMS, we have the experience and know-how to deliver.</p><a href="#" name="anchor" class="pd-section-14-btn">Contact Us</a> 
+                        <p class="pd-section-14-leading-para">Hi, we&rsquo;re Tim and Emma Bowerbank, web developers based in Cornwall in the UK. We&rsquo;re here to help you create your web projects. From bespoke systems to websites with a CMS, we have the experience and know-how to deliver.</p>
+                        <a href="#" name="anchor" class="pd-section-14-btn">Contact Us</a> 
                     </header>
                     <div class="col-lg-6">
                         <div class="row">
@@ -578,7 +581,7 @@
                             <p class="pd-section-15-headline">Hello!</p>
                         </header>                         
                     </div>
-                    <div class="col-md-2 pb-3 pb-md-0">
+                    <div class="col-lg-auto pb-3 pb-md-0">
                         <div class="pb-2 pt-2 text-center text-lg-start">
                             <picture>
                                 <source srcset="/images/uploads/testimonial-man-3.webp" type="image/webp"/>
@@ -590,7 +593,7 @@
                             </picture>
                         </div>                         
                     </div>
-                    <div class="col-md-10 pb-3 text-center text-md-start"> 
+                    <div class="col-lg-9 pb-3 text-center text-md-start"> 
                         <p class="pd-section-15-leading-para">We&apos;re two <strong>UK based web and app developers</strong>. Friendly, approachable and focused on developing effective <strong>web and app solutions</strong>. Solutions that use the best of the modern web. We&rsquo;re excited about the new advances in technology and we want you to benefit. We&apos;re based in Cornwall and can work with you wherever you are.</p> 
                     </div>
                     <article class="col-md-4">
@@ -605,7 +608,8 @@
                         <h3 class="pd-section-15-subHeadlines">Game Development</h3> 
                         <p class="pd-section-15-block-para">Engaging games for the primary education market. Compatible with multiple devices including whiteboards and Chromebooks. Play in browser or as an app. <a href="#">Read game developer service</a></p> 
                     </article>
-                    <footer class="col-12 pt-2 text-center"><a href="#" name="anchor" class="pd-section-15-btn">Contact Us</a> 
+                    <footer class="col-12 pt-2 text-center">
+                        <a href="#" name="anchor" class="pd-section-15-btn">Contact Us</a> 
                     </footer>
                 </div>
             </div>
@@ -624,7 +628,7 @@
                             <p class="pd-section-16-headline">Hello!</p>
                         </header>                         
                     </div>
-                    <div class="col-md-2 pb-3 pb-md-0">
+                    <div class="col-lg-auto pb-3 pb-md-0">
                         <div class="pb-2 pt-2 text-center text-lg-start">
                             <picture>
                                 <source srcset="/images/uploads/testimonial-man-3.webp" type="image/webp"/>
@@ -636,7 +640,7 @@
                             </picture>
                         </div>                         
                     </div>
-                    <div class="col-md-10 pb-3 text-center text-md-start"> 
+                    <div class="col-lg-9 pb-3 text-center text-md-start"> 
                         <p class="pd-section-16-leading-para">We&apos;re two <strong>UK based web and app developers</strong>. Friendly, approachable and focused on developing effective <strong>web and app solutions</strong>. Solutions that use the best of the modern web. We&rsquo;re excited about the new advances in technology and we want you to benefit. We&apos;re based in Cornwall and can work with you wherever you are.</p> 
                     </div>
                     <article class="col-md-4">
@@ -651,8 +655,7 @@
                         <h3 class="pd-section-16-subHeadlines">Game Development</h3> 
                         <p class="pd-section-16-block-para">Engaging games for the primary education market. Compatible with multiple devices including whiteboards and Chromebooks. Play in browser or as an app. <a href="#">Read game developer service</a></p> 
                     </article>
-                    <footer class="col-12 pt-2 text-center">
-                        <a href="#" name="anchor" class="pd-section-16-btn">Contact Us</a> 
+                    <footer class="col-12 pt-2 text-center"><a href="#" name="anchor" class="pd-section-16-btn">Contact Us</a> 
                     </footer>
                 </div>
             </div>
@@ -660,6 +663,77 @@
         <section class="pb-5 pt-5" style="position: relative;">
             <div style="position: absolute; bottom: 1px;">
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-section-17</p>
+            </div>
+        </section>
+        <section class="pb-5 pd-section-17 pt-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 pb-3">
+                        <header class="text-center text-md-start">
+                            <h2 class="pd-section-17-label">Project Features</h2>
+                            <p class="pd-section-17-headline">Check out all the features!</p>
+                        </header>                         
+                        <p class="pd-section-17-subPara">This project used a wide range of modern tech features including a snazzy headless CMS and Netlify&apos;s global CDN.</p> 
+                    </div>
+                    <div class="col-md-3">
+                        <picture>
+                            <source srcset="/images/uploads/cards-sample-1.webp" type="image/webp"/>
+                            <img class="img-fluid" src="/images/uploads/cards-sample-1.jpg" alt="image of project site" loading="lazy"/>
+                        </picture>
+                    </div>
+                    <div class="col-12 col-md-9 pt-4 pt-md-0">
+                        <div class="pd-list-1-grid">
+                            <div class="pd-list-1-grid-item">
+                                <img src="images/design-assets/icon-checkmark.svg" alt="icon of checkmark" width="22" height="22"/>
+                                <p>Role tracking</p>
+                            </div>
+                            <div class="pd-list-1-grid-item">
+                                <img src="images/design-assets/icon-checkmark.svg" alt="icon of checkmark" width="22" height="22"/>
+                                <p>Digital Timesheets</p>
+                            </div>
+                            <div class="pd-list-1-grid-item">
+                                <img src="images/design-assets/icon-checkmark.svg" alt="icon of checkmark" width="22" height="22"/>
+                                <p>Job Matching</p>
+                            </div>
+                            <div class="pd-list-1-grid-item">
+                                <img src="images/design-assets/icon-checkmark.svg" alt="icon of checkmark" width="22" height="22"/>
+                                <p>Job Posting</p>
+                            </div>
+                            <div class="pd-list-1-grid-item">
+                                <img src="images/design-assets/icon-checkmark.svg" alt="icon of checkmark" width="22" height="22"/>
+                                <p>Automated Candidate Search</p>
+                            </div>
+                            <div class="pd-list-1-grid-item">
+                                <img src="images/design-assets/icon-checkmark.svg" alt="icon of checkmark" width="22" height="22"/>
+                                <p>Secure Document Storage</p>
+                            </div>
+                            <div class="pd-list-1-grid-item">
+                                <img src="images/design-assets/icon-checkmark.svg" alt="icon of checkmark" width="22" height="22"/>
+                                <p>Instant In-App Chat</p>
+                            </div>
+                            <div class="pd-list-1-grid-item">
+                                <img src="images/design-assets/icon-checkmark.svg" alt="icon of checkmark" width="22" height="22"/>
+                                <p>Automated Compliance Monitoring</p>
+                            </div>
+                            <div class="pd-list-1-grid-item">
+                                <img src="images/design-assets/icon-checkmark.svg" alt="icon of checkmark" width="22" height="22"/>
+                                <p>Invoicing &amp; Payroll</p>
+                            </div>
+                            <div class="pd-list-1-grid-item">
+                                <img src="images/design-assets/icon-checkmark.svg" alt="icon of checkmark" width="22" height="22"/>
+                                <p>Invoicing &amp; Payroll</p>
+                            </div>
+                        </div>                                                  
+                    </div>
+                    <div class="col-12 pt-4 text-center">
+                        <a target="_blank" href="#" name="anchor" class="pd-section-17-btn">Visit the website</a>                          
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-section-18</p>
             </div>
         </section>
         <script src="assets/js/popper.min.js"></script>
