--- a/_factory_widgets.html
+++ b/_factory_widgets.html
@@ -21,12 +21,14 @@
         <section>
             <div class="container">
                 <div class="row">
-                    <div class="col-md-8">
+                    <div class="col-lg-9">
                         <h3>left hand col</h3> 
-                        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p> 
+                        <p>Just copy the right hand column. Which has pd-widget-1 class.</p> 
                     </div>
-                    <aside class="col-md-4 pb-3 pd-widget-1 pt-5">
-                        <h3 class="mb-3 pb-2 pd-widget-1-label text-end">Latest News</h3>
+                    <aside class="col-lg-3 pb-3 pd-widget-1 pt-5">
+                        <header>
+                            <h3 class="mb-3 pb-2 pd-widget-1-label text-center text-lg-end">Latest News</h3>
+                        </header>
                         <article class="pd-widget-1-article-outer">
                             <div class="pd-widget-1-image-outer">
                                 <picture>
@@ -34,8 +36,7 @@
                                     <img src="/images/uploads/sections-sample-healthcare.jpg" class="img-fluid" loading="lazy"/>
                                 </picture>
                             </div>
-                            <div class="pd-widget-1-text-outer">
-                                <a href="#" class="pd-widget-1-link">Scully launched</a>
+                            <div class="pd-widget-1-text-outer"><a href="#" class="pd-widget-1-link">Scully launched</a>
                                 <div class="pd-widget-1-date-outer">
                                     <img src="images/design-assets/icon-calendar.svg" alt="icon of a calendar" width="16" height="16"/>
                                     <p class="pd-widget-1-date">04 March 2020</p>
@@ -50,8 +51,7 @@
                                     <img src="/images/uploads/sections-sample-manufacturing.jpg" class="img-fluid" loading="lazy"/>
                                 </picture>
                             </div>
-                            <div class="pd-widget-1-text-outer">
-                                <a href="#" class="pd-widget-1-link">Wireframing with Adobe XD</a>
+                            <div class="pd-widget-1-text-outer"><a href="#" class="pd-widget-1-link">Wireframing with Adobe XD</a>
                                 <div class="pd-widget-1-date-outer">
                                     <img src="images/design-assets/icon-calendar.svg" alt="icon of a calendar" width="16" height="16"/>
                                     <p class="pd-widget-1-date">27 February 2020</p>
@@ -66,17 +66,15 @@
                                     <img src="/images/uploads/sections-samples-business.jpg" class="img-fluid" loading="lazy"/>
                                 </picture>
                             </div>
-                            <div class="pd-widget-1-text-outer">
-                                <a href="#" class="pd-widget-1-link">Membership web app</a>
+                            <div class="pd-widget-1-text-outer"><a href="#" class="pd-widget-1-link">Membership web app</a>
                                 <div class="pd-widget-1-date-outer">
                                     <img src="images/design-assets/icon-calendar.svg" alt="icon of a calendar" width="16" height="16"/>
                                     <p class="pd-widget-1-date">12 February 2020</p>
                                 </div>
                             </div>
                         </article>
-                        <div class="pb-3 pt-3 text-center">
-                            <a href="#" name="anchor" class="pd-widget-1-btn">View all news</a>
-                        </div>                         
+                        <footer class="pb-3 pt-3 text-center"><a href="#" name="anchor" class="pd-widget-1-btn">View all news</a>
+                        </footer>                         
                     </aside>
                 </div>
             </div>
@@ -84,6 +82,166 @@
         <section class="pb-5 pt-5" style="position: relative;">
             <div style="position: absolute; bottom: 1px;">
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-widget-2</p>
+            </div>
+        </section>
+        <section>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-9">
+                        <h3>left hand col</h3> 
+                        <p>Just copy the right hand column. Which has pd-widget-2 class.</p> 
+                    </div>
+                    <aside class="col-lg-3 pb-3 pd-widget-2 pt-5">
+                        <div class="pd-widget-2-outer">
+                            <h3 class="pd-widget-2-label">Knowledgebase</h3>
+                            <div class="pd-widget-2-list-item">
+                                <a href="#" name="anchor">All websites are not created equal</a>
+                            </div>
+                            <div class="pd-widget-2-list-item">
+                                <a href="#" name="anchor">What are static site generators?</a>
+                            </div>
+                            <div class="pd-widget-2-list-item">
+                                <a href="#" name="anchor">Exploring progressive web apps</a>
+                            </div>
+                            <div class="pd-widget-2-list-item">
+                                <a href="#" name="anchor">All about the CloudCannon CMS</a>
+                            </div>
+                            <div class="pd-widget-2-list-item">
+                                <a href="#" name="anchor">Improving accessibility</a>
+                            </div>
+                            <footer class="pt-1 text-center">
+                                <a href="#" name="anchor" class="pd-widget-2-btn">View All</a>
+                            </footer>
+                        </div>                         
+                    </aside>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-widget-3</p>
+            </div>
+        </section>
+        <section>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-9">
+                        <h3>left hand col</h3> 
+                        <p>Just copy the right hand column. Which has pd-widget-3 class.</p> 
+                    </div>
+                    <aside class="col-lg-3 pb-3 pd-widget-3 pt-5">
+                        <header>
+                            <h3 class="mb-3 pb-2 pd-widget-3-label text-center text-lg-end">Case Studies</h3>
+                        </header>
+                        <article>
+                            <header class="pd-widget-3-article-header">
+                                <div class="pd-widget-3-image-outer">
+                                    <picture>
+                                        <source srcset="/images/uploads/sections-sample-healthcare.webp" type="image/webp"/>
+                                        <img src="/images/uploads/sections-sample-healthcare.jpg" class="img-fluid" loading="lazy"/>
+                                    </picture>
+                                </div>
+                                <div class="pd-widget-3-text-outer"><a href="#" class="pd-widget-3-link">High search rankings in a competitive market</a>
+                                </div>
+                            </header>
+                            <div class="pd-widget-3-text">
+                                <p>We built a new performant website for international artist Naomi Jenkin. The new site is achieving page one Google search results for many popular keywords</p>
+                            </div>
+                        </article>
+                        <div class="pd-widget-3-border-bottom"></div>
+                        <article>
+                            <header class="pd-widget-3-article-header">
+                                <div class="pd-widget-3-image-outer">
+                                    <picture>
+                                        <source srcset="/images/uploads/sections-sample-manufacturing.webp" type="image/webp"/>
+                                        <img src="/images/uploads/sections-sample-manufacturing.jpg" class="img-fluid" loading="lazy"/>
+                                    </picture>
+                                </div>
+                                <div class="pd-widget-3-text-outer"><a href="#" class="pd-widget-3-link">Helping Scientific Services grow their business</a>
+                                </div>
+                            </header>
+                            <div class="pd-widget-3-text">
+                                <p>Scientific Services needed a new website to support its ambitious growth objectives.</p>
+                            </div>
+                        </article>
+                        <div class="pd-widget-3-border-bottom"></div>
+                        <article>
+                            <header class="pd-widget-3-article-header">
+                                <div class="pd-widget-3-image-outer">
+                                    <picture>
+                                        <source srcset="/images/uploads/sections-samples-business.webp" type="image/webp"/>
+                                        <img src="/images/uploads/sections-samples-business.jpg" class="img-fluid" loading="lazy"/>
+                                    </picture>
+                                </div>
+                                <div class="pd-widget-3-text-outer"><a href="#" class="pd-widget-3-link">Showcasing Quality</a>
+                                </div>
+                            </header>
+                            <div class="pd-widget-3-text">
+                                <p>Scientific Services needed a new website to support its ambitious growth objectives.</p>
+                            </div>
+                        </article>
+                        <footer class="pb-3 pt-3 text-center">
+                            <a href="#" name="anchor" class="pd-widget-3-btn">View ALl Case STudies</a>
+                        </footer>                         
+                    </aside>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-widget-4</p>
+            </div>
+        </section>
+        <section>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-9">
+                        <h3>left hand col</h3> 
+                        <p>Just copy the right hand column. Which has pd-widget-4 class.</p> 
+                    </div>
+                    <aside class="col-lg-3 pb-5 pd-widget-4 pt-5">
+                        <div class="pd-widget-4-outer text-center text-lg-end">
+                            <h3 class="pd-widget-4-headline">Web devs</h3>
+                            <p class="pd-widget-4-subHeadline">Helping to build simple and complex web solutions</p>
+                            <footer><a href="#" name="anchor" class="pd-widget-4-btn">Contact Us</a>
+                            </footer>
+                        </div>                         
+                    </aside>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-widget-5</p>
+            </div>
+        </section>
+        <section>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-9">
+                        <h3>left hand col</h3> 
+                        <p>Just copy the right hand column. Which has pd-widget-5 class.</p> 
+                    </div>
+                    <aside class="col-lg-3 pb-5 pd-widget-5 pt-5">
+                        <div class="pd-widget-5-outer">
+                            <picture>
+                                <source srcset="/images/uploads/widget-sample-taxi.webp" type="image/webp"/>
+                                <img src="/images/uploads/widget-sample-taxi.jpg" class="pd-widget-5-img" loading="lazy"/>
+                            </picture>
+                            <div class="pd-widget-5-overlay"></div>
+                            <div class="pd-widget-5-content-outer text-center text-lg-end">
+                                <h3 class="pd-widget-5-headline">Getting you there</h3>
+                                <p class="pd-widget-5-subHeadline">Helpful development services to get you to your web development destination... stress-free</p>
+                                <a href="#" name="anchor" class="pd-widget-5-btn">Start your journey</a>
+                            </div>
+                        </div>                         
+                    </aside>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-widget-6</p>
             </div>
         </section>
         <!-- Bootstrap core JavaScript
