Added in responsive images for page menu

--- a/_factory_grid.html
+++ b/_factory_grid.html
@@ -27,7 +27,8 @@
                         <p class="pd-grid-1-subHeadline">View a snapshot of some of our work. We&apos;ve created performant, quality websites and apps.</p> 
                     </header>
                     <div class="col-12 pe-0 pe-xl-2 ps-0 ps-xl-2">
-                        <div class="pd-grid-1-grid-outer"><a href="#" class="pd-grid-1-item pd-grid-1-item-1"><article>
+                        <div class="pd-grid-1-grid-outer">
+                            <a href="#" class="pd-grid-1-item pd-grid-1-item-1"><article>
                                     <picture>
                                         <source srcset="/images/uploads/blog-post-1.webp" type="image/webp"/>
                                         <img src="/images/uploads/blog-post-1.jpg" class="pd-grid-1-image" alt="image of beach app" loading="lazy"/>
@@ -40,7 +41,8 @@
                                         </header>
                                         <p class="pd-grid-1-item-subPara">We&apos;re just about to launch an exciting app for iOS and Android</p>
                                     </div>
-                                </article>    </a><a href="#" class="pd-grid-1-item pd-grid-1-item-2"><article>
+                                </article> </a>
+                            <a href="#" class="pd-grid-1-item pd-grid-1-item-2"><article>
                                     <picture>
                                         <source srcset="/images/uploads/hero-coast-1000x1000.webp" type="image/webp"/>
                                         <img src="/images/uploads/hero-coast-1000x1000.jpg" class="pd-grid-1-image" alt="image of coastline" loading="lazy"/>
@@ -53,7 +55,8 @@
                                         </header>
                                         <p class="pd-grid-1-item-subPara">We built a new perfomant website for international artist Naomi Jenkin.</p>
                                     </div>
-                                </article>    </a><a href="#" class="pd-grid-1-item pd-grid-1-item-3"><article>
+                                </article> </a>
+                            <a href="#" class="pd-grid-1-item pd-grid-1-item-3"><article>
                                     <picture>
                                         <source srcset="/images/uploads/hero-scissors-people-working.webp" type="image/webp"/>
                                         <img src="/images/uploads/hero-scissors-people-working.jpg" class="pd-grid-1-image" alt="image for hero" loading="lazy"/>
@@ -66,7 +69,8 @@
                                         </header>
                                         <p class="pd-grid-1-item-subPara">Scientific Services needed a new website to support its ambitious growth objectives.</p>
                                     </div>
-                                </article>    </a><a href="#" class="pd-grid-1-item pd-grid-1-item-4"><article>
+                                </article> </a>
+                            <a href="#" class="pd-grid-1-item pd-grid-1-item-4"><article>
                                     <picture>
                                         <source srcset="/images/uploads/hero-testimonials.webp" type="image/webp"/>
                                         <img src="/images/uploads/hero-testimonials.jpg" class="pd-grid-1-image" alt="image for hero" loading="lazy"/>
@@ -79,7 +83,8 @@
                                         </header>
                                         <p class="pd-grid-1-item-subPara">Pendigital built Jewell Construction&apos;s new website...</p>
                                     </div>
-                                </article>    </a><a href="#" class="pd-grid-1-item pd-grid-1-item-5"><article>
+                                </article> </a>
+                            <a href="#" class="pd-grid-1-item pd-grid-1-item-5"><article>
                                     <picture>
                                         <source srcset="/images/uploads/sections-sample-healthcare.webp" type="image/webp"/>
                                         <img src="/images/uploads/sections-sample-healthcare.jpg" class="pd-grid-1-image" alt="image for healthcare" loading="lazy"/>
@@ -92,7 +97,8 @@
                                         </header>
                                         <p class="pd-grid-1-item-subPara">Our cost simulator and game helps clinicians save money and recycle more...</p>
                                     </div>
-                                </article>    </a><a href="#" class="pd-grid-1-item pd-grid-1-item-6"><article>
+                                </article> </a>
+                            <a href="#" class="pd-grid-1-item pd-grid-1-item-6"><article>
                                     <picture>
                                         <source srcset="/images/uploads/cards-sample-1.webp" type="image/webp"/>
                                         <img src="/images/uploads/cards-sample-1.jpg" class="pd-grid-1-image" alt="image for membership website" loading="lazy"/>
@@ -105,7 +111,8 @@
                                         </header>
                                         <p class="pd-grid-1-item-subPara">A new subscription based website for Club Roy</p>
                                     </div>
-                                </article>    </a><a href="#" class="pd-grid-1-item pd-grid-1-item-7"><article>
+                                </article> </a>
+                            <a href="#" class="pd-grid-1-item pd-grid-1-item-7"><article>
                                     <picture>
                                         <source srcset="/images/uploads/cards-sample-3.webp" type="image/webp"/>
                                         <img src="/images/uploads/cards-sample-3.jpg" class="pd-grid-1-image" alt="image for games case study" loading="lazy"/>
@@ -118,7 +125,8 @@
                                         </header>
                                         <p class="pd-grid-1-item-subPara">Fun and simple to use, helping children to learn their phonics.</p>
                                     </div>
-                                </article>    </a><a href="#" class="pd-grid-1-item pd-grid-1-item-8"><article>
+                                </article> </a>
+                            <a href="#" class="pd-grid-1-item pd-grid-1-item-8"><article>
                                     <picture>
                                         <source srcset="/images/uploads/cards-sample-2.webp" type="image/webp"/>
                                         <img src="/images/uploads/cards-sample-2.jpg" class="pd-grid-1-image" alt="image for html5 game" loading="lazy"/>
@@ -131,10 +139,11 @@
                                         </header>
                                         <p class="pd-grid-1-item-subPara">Another new game to support the teaching of reading and writing.</p>
                                     </div>
-                                </article>    </a>
+                                </article> </a>
                         </div>                         
                     </div>
-                    <footer class="col-12 pt-4 text-center"><a href="#" name="anchor" class="pd-grid-1-btn">View more</a> 
+                    <footer class="col-12 pt-4 text-center">
+                        <a href="#" name="anchor" class="pd-grid-1-btn">View more</a> 
                     </footer>
                 </div>
             </div>
