--- a/_factory_widgets.html
+++ b/_factory_widgets.html
@@ -33,10 +33,11 @@
                             <div class="pd-widget-1-image-outer">
                                 <picture>
                                     <source srcset="/images/uploads/sections-sample-healthcare.webp" type="image/webp"/>
-                                    <img src="/images/uploads/sections-sample-healthcare.jpg" class="img-fluid" loading="lazy"/>
+                                    <img src="/images/uploads/sections-sample-healthcare.jpg" class="img-fluid" loading="lazy" alt="image of woman at work" width="100" height="100"/>
                                 </picture>
                             </div>
-                            <div class="pd-widget-1-text-outer"><a href="#" class="pd-widget-1-link">Scully launched</a>
+                            <div class="pd-widget-1-text-outer">
+                                <a href="#" class="pd-widget-1-link">Scully launched</a>
                                 <div class="pd-widget-1-date-outer">
                                     <img src="images/design-assets/icon-calendar.svg" alt="icon of a calendar" width="16" height="16"/>
                                     <p class="pd-widget-1-date">04 March 2020</p>
@@ -48,10 +49,11 @@
                             <div class="pd-widget-1-image-outer">
                                 <picture>
                                     <source srcset="/images/uploads/sections-sample-manufacturing.webp" type="image/webp"/>
-                                    <img src="/images/uploads/sections-sample-manufacturing.jpg" class="img-fluid" loading="lazy"/>
+                                    <img src="/images/uploads/sections-sample-manufacturing.jpg" class="img-fluid" loading="lazy" alt="image of manufacturer" width="100" height="100"/>
                                 </picture>
                             </div>
-                            <div class="pd-widget-1-text-outer"><a href="#" class="pd-widget-1-link">Wireframing with Adobe XD</a>
+                            <div class="pd-widget-1-text-outer">
+                                <a href="#" class="pd-widget-1-link">Wireframing with Adobe XD</a>
                                 <div class="pd-widget-1-date-outer">
                                     <img src="images/design-assets/icon-calendar.svg" alt="icon of a calendar" width="16" height="16"/>
                                     <p class="pd-widget-1-date">27 February 2020</p>
@@ -63,17 +65,19 @@
                             <div class="pd-widget-1-image-outer">
                                 <picture>
                                     <source srcset="/images/uploads/sections-samples-business.webp" type="image/webp"/>
-                                    <img src="/images/uploads/sections-samples-business.jpg" class="img-fluid" loading="lazy"/>
+                                    <img src="/images/uploads/sections-samples-business.jpg" class="img-fluid" loading="lazy" alt="image of office workers" width="100" height="100"/>
                                 </picture>
                             </div>
-                            <div class="pd-widget-1-text-outer"><a href="#" class="pd-widget-1-link">Membership web app</a>
+                            <div class="pd-widget-1-text-outer">
+                                <a href="#" class="pd-widget-1-link">Membership web app</a>
                                 <div class="pd-widget-1-date-outer">
                                     <img src="images/design-assets/icon-calendar.svg" alt="icon of a calendar" width="16" height="16"/>
                                     <p class="pd-widget-1-date">12 February 2020</p>
                                 </div>
                             </div>
                         </article>
-                        <footer class="pb-3 pt-3 text-center"><a href="#" name="anchor" class="pd-widget-1-btn">View all news</a>
+                        <footer class="pb-3 pt-3 text-center">
+                            <a href="#" name="anchor" class="pd-widget-1-btn">View all news</a>
                         </footer>                         
                     </aside>
                 </div>
@@ -94,23 +98,17 @@
                     <aside class="col-lg-3 pb-3 pd-widget-2 pt-5">
                         <div class="pd-widget-2-outer">
                             <h3 class="pd-widget-2-label">Knowledgebase</h3>
-                            <div class="pd-widget-2-list-item">
-                                <a href="#" name="anchor">All websites are not created equal</a>
+                            <div class="pd-widget-2-list-item"><a href="#" name="anchor">All websites are not created equal</a>
                             </div>
-                            <div class="pd-widget-2-list-item">
-                                <a href="#" name="anchor">What are static site generators?</a>
+                            <div class="pd-widget-2-list-item"><a href="#" name="anchor">What are static site generators?</a>
                             </div>
-                            <div class="pd-widget-2-list-item">
-                                <a href="#" name="anchor">Exploring progressive web apps</a>
+                            <div class="pd-widget-2-list-item"><a href="#" name="anchor">Exploring progressive web apps</a>
                             </div>
-                            <div class="pd-widget-2-list-item">
-                                <a href="#" name="anchor">All about the CloudCannon CMS</a>
+                            <div class="pd-widget-2-list-item"><a href="#" name="anchor">All about the CloudCannon CMS</a>
                             </div>
-                            <div class="pd-widget-2-list-item">
-                                <a href="#" name="anchor">Improving accessibility</a>
+                            <div class="pd-widget-2-list-item"><a href="#" name="anchor">Improving accessibility</a>
                             </div>
-                            <footer class="pt-1 text-center">
-                                <a href="#" name="anchor" class="pd-widget-2-btn">View All</a>
+                            <footer class="pt-1 text-center"><a href="#" name="anchor" class="pd-widget-2-btn">View All</a>
                             </footer>
                         </div>                         
                     </aside>
@@ -138,10 +136,11 @@
                                 <div class="pd-widget-3-image-outer">
                                     <picture>
                                         <source srcset="/images/uploads/sections-sample-healthcare.webp" type="image/webp"/>
-                                        <img src="/images/uploads/sections-sample-healthcare.jpg" class="img-fluid" loading="lazy"/>
+                                        <img src="/images/uploads/sections-sample-healthcare.jpg" class="img-fluid" loading="lazy" alt="image of woman" width="100" height="100"/>
                                     </picture>
                                 </div>
-                                <div class="pd-widget-3-text-outer"><a href="#" class="pd-widget-3-link">High search rankings in a competitive market</a>
+                                <div class="pd-widget-3-text-outer">
+                                    <a href="#" class="pd-widget-3-link">High search rankings in a competitive market</a>
                                 </div>
                             </header>
                             <div class="pd-widget-3-text">
@@ -154,10 +153,11 @@
                                 <div class="pd-widget-3-image-outer">
                                     <picture>
                                         <source srcset="/images/uploads/sections-sample-manufacturing.webp" type="image/webp"/>
-                                        <img src="/images/uploads/sections-sample-manufacturing.jpg" class="img-fluid" loading="lazy"/>
+                                        <img src="/images/uploads/sections-sample-manufacturing.jpg" class="img-fluid" loading="lazy" alt="image of manufacturer" width="100" height="100"/>
                                     </picture>
                                 </div>
-                                <div class="pd-widget-3-text-outer"><a href="#" class="pd-widget-3-link">Helping Scientific Services grow their business</a>
+                                <div class="pd-widget-3-text-outer">
+                                    <a href="#" class="pd-widget-3-link">Helping Scientific Services grow their business</a>
                                 </div>
                             </header>
                             <div class="pd-widget-3-text">
@@ -170,18 +170,18 @@
                                 <div class="pd-widget-3-image-outer">
                                     <picture>
                                         <source srcset="/images/uploads/sections-samples-business.webp" type="image/webp"/>
-                                        <img src="/images/uploads/sections-samples-business.jpg" class="img-fluid" loading="lazy"/>
+                                        <img src="/images/uploads/sections-samples-business.jpg" class="img-fluid" loading="lazy" alt="image of office workers" width="100" height="100"/>
                                     </picture>
                                 </div>
-                                <div class="pd-widget-3-text-outer"><a href="#" class="pd-widget-3-link">Showcasing Quality</a>
+                                <div class="pd-widget-3-text-outer">
+                                    <a href="#" class="pd-widget-3-link">Showcasing Quality</a>
                                 </div>
                             </header>
                             <div class="pd-widget-3-text">
                                 <p>Scientific Services needed a new website to support its ambitious growth objectives.</p>
                             </div>
                         </article>
-                        <footer class="pb-3 pt-3 text-center">
-                            <a href="#" name="anchor" class="pd-widget-3-btn">View ALl Case STudies</a>
+                        <footer class="pb-3 pt-3 text-center"><a href="#" name="anchor" class="pd-widget-3-btn">View ALl Case STudies</a>
                         </footer>                         
                     </aside>
                 </div>
@@ -203,7 +203,8 @@
                         <div class="pd-widget-4-outer text-center text-lg-end">
                             <h3 class="pd-widget-4-headline">Web devs</h3>
                             <p class="pd-widget-4-subHeadline">Helping to build simple and complex web solutions</p>
-                            <footer><a href="#" name="anchor" class="pd-widget-4-btn">Contact Us</a>
+                            <footer>
+                                <a href="#" name="anchor" class="pd-widget-4-btn">Contact Us</a>
                             </footer>
                         </div>                         
                     </aside>
@@ -226,13 +227,12 @@
                         <div class="pd-widget-5-outer">
                             <picture>
                                 <source srcset="/images/uploads/widget-sample-taxi.webp" type="image/webp"/>
-                                <img src="/images/uploads/widget-sample-taxi.jpg" class="pd-widget-5-img" loading="lazy"/>
+                                <img src="/images/uploads/widget-sample-taxi.jpg" class="pd-widget-5-img" loading="lazy" alt="image of taxi" width="700" height="400"/>
                             </picture>
                             <div class="pd-widget-5-overlay"></div>
                             <div class="pd-widget-5-content-outer text-center text-lg-end">
                                 <h3 class="pd-widget-5-headline">Getting you there</h3>
-                                <p class="pd-widget-5-subHeadline">Helpful development services to get you to your web development destination... stress-free</p>
-                                <a href="#" name="anchor" class="pd-widget-5-btn">Start your journey</a>
+                                <p class="pd-widget-5-subHeadline">Helpful development services to get you to your web development destination... stress-free</p><a href="#" name="anchor" class="pd-widget-5-btn">Start your journey</a>
                             </div>
                         </div>                         
                     </aside>
