--- a/_factory_page_menus.html
+++ b/_factory_page_menus.html
@@ -6,15 +6,64 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
         <meta name="description" content=""/>
         <meta name="author" content=""/>
-        <title>Page Menues</title>
+        <title>Page Menus</title>
         <!-- Bootstrap core CSS -->
         <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
         <!-- Custom styles for this template -->
         <link href="style.css" rel="stylesheet"/>
     </head>
     <body>
-        <div class="container">
-</div>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-page-menu-1</p>
+            </div>
+        </section>
+        <section>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 pd-page-menu-1">
+                        <picture>
+                            <source srcset="/images/uploads/hero-testimonials-mob.webp 820w, /images/uploads/hero-testimonials.webp 1800w" sizes="(max-width: 600px) 100vw, 1800px" type="image/webp"/>
+                            <img class="img-fluid" srcset="/images/uploads/hero-testimonials-mob.jpg 820w, /images/uploads/hero-testimonials.jpg 1800w" sizes="(max-width: 600px) 100vw, 1800px" src="/images/uploads/hero-testimonials.jpg"/>
+                        </picture>
+                        <hr/>
+                        <div>
+                            <header>
+                                <p class="pd-menu-1-label">Page Menu</p>
+                            </header>
+                            <nav>
+                                <ol>
+                                    <li><a href="">List item</a>
+                                    </li>
+                                    <li><a href="">List item</a>
+                                    </li>
+                                    <li><a href="">List item</a>
+                                    </li>
+                                    <li><a href="">List item</a>
+                                    </li>
+                                    <li><a href="">List item</a>
+                                    </li>
+                                    <li><a href="">List item</a>
+                                    </li>
+                                    <li><a href="">List item</a>
+                                    </li>
+                                </ol>
+                            </nav>
+                        </div>
+                        <hr/> 
+                    </div>
+                    <div class="col-lg-4">
+                        <h3>Right hand col</h3> 
+                        <p>Cut and paste the lefthand column with the class pd-page-menu-1</p> 
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-page-menu-2</p>
+            </div>
+        </section>
         <!-- Bootstrap core JavaScript
     ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
