Added new form for contact - refinements

--- a/_factory_forms.html
+++ b/_factory_forms.html
@@ -40,12 +40,16 @@ Fill in your details and one of our wonderful staff will contact you to find out
                                 <button aria-selected="true" data-panel-id="contact-sales" type="button" class="pd-active pd-forms-1-button" id="form1btn1">Sales</button>
                                 <button aria-selected="false" data-panel-id="contact-support" type="button" class="pd-forms-1-button" id="form1btn2">Support</button>
                             </div>
-                            <div aria-labelledby="contact-sales" aria-hidden="false" class="pd-active pd-forms-1-contact-panel" id="contact-sales" style="opacity: 1;"><a href="mailto:hi@scissorsapp.com" name="anchor"><span><img src="images/design-assets/icon-email-primary.svg" alt="icon for email" width="32" height="32" class="me-2"/></span>hi@scissorsapp.com</a><a href="tel:+64 22 620 2412" name="anchor"><span><img src="images/design-assets/icon-phone-primary.svg" alt="icon for email" width="32" height="32" class="me-2"/></span>+64 22 620 2412</a>
+                            <div aria-labelledby="contact-sales" aria-hidden="false" class="pd-active pd-forms-1-contact-panel" id="contact-sales" style="opacity: 1;">
+                                <a href="mailto:hi@scissorsapp.com" name="anchor"><span><img src="images/design-assets/icon-email-primary.svg" alt="icon for email" width="32" height="32" class="me-2"/></span>hi@scissorsapp.com</a>
+                                <a href="tel:+64 22 620 2412" name="anchor"><span><img src="images/design-assets/icon-phone-primary.svg" alt="icon for email" width="32" height="32" class="me-2"/></span>+64 22 620 2412</a>
                                 <div class="pd-forms-1-contact-panel-para">
                                     <p>Speak with <strong>Lester Selvey </strong>our Business Development Manager</p>
                                 </div>
                             </div>
-                            <div aria-hidden="true" aria-labelledby="contact-support" class="pd-forms-1-contact-panel" id="contact-support"><a href="mailto:hi@scissorsapp.com" name="anchor"><span><img src="images/design-assets/icon-email-primary.svg" alt="icon for email" width="32" height="32" class="me-2"/></span>support@scissorsapp.com</a><a href="tel:+64 800 548 284" name="anchor"><span><img src="images/design-assets/icon-phone-primary.svg" alt="icon for email" width="32" height="32" class="me-2"/></span>+64 800 548 284</a>
+                            <div aria-hidden="true" aria-labelledby="contact-support" class="pd-forms-1-contact-panel" id="contact-support">
+                                <a href="mailto:hi@scissorsapp.com" name="anchor"><span><img src="images/design-assets/icon-email-primary.svg" alt="icon for email" width="32" height="32" class="me-2"/></span>support@scissorsapp.com</a>
+                                <a href="tel:+64 800 548 284" name="anchor"><span><img src="images/design-assets/icon-phone-primary.svg" alt="icon for email" width="32" height="32" class="me-2"/></span>+64 800 548 284</a>
                                 <div class="pd-forms-1-contact-panel-para">
                                     <p>Our support desk is open <strong>Monday to Friday 0800hrs to 1700hrs</strong>.</p>
                                 </div>
@@ -75,7 +79,8 @@ Fill in your details and one of our wonderful staff will contact you to find out
                                     <label for="message" class="form-label">Questions and Feedback?</label>                                     
                                     <textarea class="form-control" id="message" rows="5"></textarea> 
                                 </div>                                 
-                                <button type="submit" class="btn btn-info "><span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
+                                <button type="submit" class="btn btn-info ">
+                                    <span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
                                 </button>                                 
                             </form>
                         </div>                         
@@ -99,37 +104,38 @@ Fill in your details and one of our wonderful staff will contact you to find out
                                 <div class="mb-3">
                                     <label for="fullName" class="form-label">Full Name</label>
                                     <input type="text" class="form-control" id="fullName" placeholder="Full name"/>
-                                </div>                                                                  
+                                </div>                                 
                             </div>
                             <div class="col-lg-6">
                                 <div class="mb-3">
                                     <label for="email" class="form-label">Email</label>
                                     <input type="email" class="form-control" id="email" placeholder="Email"/>
-                                </div>                                                                  
+                                </div>                                 
                             </div>
                             <div class="col-lg-12">
                                 <div class="mb-3">
                                     <label for="subject" class="form-label">Your subject</label>
                                     <input type="text" class="form-control" id="subject" placeholder="Email subject"/>
-                                </div>                                                                  
+                                </div>                                 
                             </div>
                             <div class="col-lg-12">
                                 <div class="mb-3">
                                     <label for="message" class="form-label">Your message</label>
                                     <textarea class="form-control" id="message" rows="5"></textarea>
                                 </div>
-                                <input type="submit" value="Submit" class="pd-forms-2-submit"/>                                  
-                            </div>                                                                                                                                                                              
+                                <input type="submit" value="Submit" class="pd-forms-2-submit"/> 
+                            </div>                             
                         </form>                         
                     </div>
                     <div class="col-lg-6">
-                        <h2>Address</h2>
+                        <h2>Contact Details</h2>
                         <div class="row">
-                            <div class="col-lg-6 pb-5 pb-lg-0">
+                            <div class=" col-lg-6 pb-4 pb-lg-0">
                                 <p class="pd-forms-2-label">Registered Office</p> 
                                 <div class="pd-forms-2-address">
                                     <p><strong>Pendigital Limited</strong></p>
-                                    <p>Waterside Court, Falmouth Road</p>
+                                    <p>Waterside Court</p>
+                                    <p>Falmouth Road</p>
                                     <p>Penryn</p>
                                     <p>Cornwall, TR10 8AW</p>
                                     <p>United Kingdom</p>
@@ -139,21 +145,21 @@ Fill in your details and one of our wonderful staff will contact you to find out
                                     <p>No:&nbsp;12335082</p>
                                 </div>                                 
                             </div>
-                            <div class="col-lg-6">
+                            <div class="col-lg-6 pb-5 pb-lg-0">
                                 <p class="pd-forms-2-label">Office</p> 
                                 <div class="pd-forms-2-address">
                                     <p><strong>Pendigital Limited</strong></p>
-                                    <p>Seaview Trenoweth Road</p>
+                                    <p>Seaview&nbsp;</p>
+                                    <p>Trenoweth Road</p>
                                     <p>Falmouth</p>
                                     <p>Cornwall, TR11 5GH</p>
                                     <p>United Kingdom</p>
                                 </div>
                                 <p class="pd-forms-2-label pt-4">Phone:&nbsp;</p>
-                                <div class="pd-forms-2-address">
-                                    <a href="tel:07976361908">07976 361908</a>
+                                <div class="pd-forms-2-address"><a href="tel:+447976361908">07976 361908</a>
                                 </div>                                 
                             </div>
-                        </div>                                                  
+                        </div>                         
                     </div>
                 </div>
             </div>
